# asyncio-talk

./: README.md  pyproject.toml
code/: await_coroutine.py  await_tasks.py  cancel.py  coroutines.py  errors.py  executor.py  factorial.py  gather.py  io.py  timeout.py  wait_all_completed.py  wait_first_completed.py  wait_first_exception.py  web_crawler.py
presentation/: 1_concepts.md  2_asyncio.md  3_sync_primitives.md  4_what_next.md  asyncio.md  concepts.md  sync_primitives.md  what_next.md
