[tool.poetry]
name = "asyncio-talk"
version = "0.1.0"
description = ""
authors = ["Udayakumar Rayala <urayala@apple.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
beautifulsoup4 = "^4.8"
requests = "^2.22"
cchardet = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
